--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  position: relative;
 }
 
 h1, h2, h3 {
@@ -131,6 +132,13 @@ footer {
 }
 .carousel-card--desktop {
   padding-inline: 18px;
+}
+
+#sketch {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 /***
