--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ footer {
 .carousel-card {
   background: rgba(255, 255, 255, 0.1);
   padding-top: 52px;
-  flex-shrink: 0;
+  flex: none;
   cursor: pointer;
   margin-inline: 12px;
 }
